# Gemini-Trading-2026

./: .env.example  .gitignore  Makefile  docker-compose.yml  polymarket-trading-system-prompt.md  prometheus.yml  pyproject.toml
config/: logging.py  markets.py  settings.py
core/: clock.py  events.py  exceptions.py  types.py
docs/superpowers/specs/: 2026-03-30-phase1-foundation-design.md
scripts/: db_migrate.py
tests/: conftest.py  test_clock.py  test_event_bus.py  test_types.py
