[project]
name = "polymarket-trading"
version = "0.1.0"
description = "Quantitative trading system for Polymarket prediction markets"
requires-python = ">=3.12"
dependencies = [
    "structlog>=24.0",
    "pydantic-settings>=2.0",
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "prometheus-client>=0.20",
    "py-clob-client>=0.17",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
